[gd_scene load_steps=22 format=4 uid="uid://emwvnpvahjfa"]

[ext_resource type="Script" path="res://scenes/levels/dungeon_level.gd" id="1_x8iuq"]
[ext_resource type="PackedScene" uid="uid://30n2o1l78jxr" path="res://scenes/entities/dungeon_entrance/dungeon_entrance.tscn" id="2_dstv0"]
[ext_resource type="PackedScene" uid="uid://bwlrqnguuk0yg" path="res://scenes/entities/dungeon_exit/dungeon_exit.tscn" id="3_7rjgo"]
[ext_resource type="PackedScene" uid="uid://dl1i1ytfm3yq8" path="res://scenes/levels/echelon/echelon_background/echelon_background.tscn" id="4_unr5i"]
[ext_resource type="Script" path="res://scenes/tile_map_layers/echelon_dungeon_tile_map_layers.gd" id="5_i5bmi"]
[ext_resource type="TileSet" uid="uid://c1unmjqcqtjgr" path="res://scenes/tile_maps/echelon/echelon_tile_set_1.tres" id="6_82wh7"]
[ext_resource type="TileSet" uid="uid://bxwbovt0rew57" path="res://scenes/tile_maps/echelon/echelon_tile_set_2.tres" id="7_7koj6"]
[ext_resource type="Texture2D" uid="uid://bsxmwb4d6pge5" path="res://assets/echelon_tiles/tile_decorations.png" id="8_en858"]
[ext_resource type="PackedScene" uid="uid://crn0k4nf1fvyl" path="res://scenes/entities/prickly_pear/prickly_pear.tscn" id="9_415li"]
[ext_resource type="PackedScene" uid="uid://c3xqiiibyonaa" path="res://scenes/entities/echelon_obstacle/echelon_obstacle.tscn" id="10_ag1h7"]
[ext_resource type="PackedScene" uid="uid://ccjd8iuh12v15" path="res://scenes/game_start/game_start.tscn" id="11_7w77i"]
[ext_resource type="PackedScene" uid="uid://v8ktvgppf1kf" path="res://scenes/game_camera/game_camera.tscn" id="12_fo124"]
[ext_resource type="Script" path="res://scenes/level_transitions/dungeon_level_transition_areas_controller.gd" id="13_7bwq1"]
[ext_resource type="PackedScene" uid="uid://bxorvbg3vlxdk" path="res://scenes/level_transitions/level_transition_area.tscn" id="14_neaxl"]
[ext_resource type="Script" path="res://scenes/level_transitions/dungeon_level_transition_area.gd" id="15_tgxct"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ekoqy"]
resource_name = "decorations"
texture = ExtResource("8_en858")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
6:3/next_alternative_id = 2
6:3/0 = 0
6:3/1 = 1
6:3/1/flip_h = true
7:3/next_alternative_id = 2
7:3/0 = 0
7:3/1 = 1
7:3/1/flip_v = true
8:3/next_alternative_id = 2
8:3/0 = 0
8:3/1 = 1
8:3/1/flip_v = true
9:3/next_alternative_id = 2
9:3/0 = 0
9:3/1 = 1
9:3/1/flip_h = true
9:3/1/flip_v = true
10:3/next_alternative_id = 2
10:3/0 = 0
10:3/1 = 1
10:3/1/flip_h = true
10:3/1/flip_v = true
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
6:4/next_alternative_id = 4
6:4/0 = 0
6:4/1 = 1
6:4/1/flip_h = true
6:4/3 = 3
6:4/3/flip_v = true
7:4/next_alternative_id = 2
7:4/0 = 0
7:4/1 = 1
7:4/1/flip_h = true
8:4/next_alternative_id = 3
8:4/0 = 0
8:4/1 = 1
8:4/1/flip_h = true
8:4/2 = 2
8:4/2/flip_v = true
9:4/next_alternative_id = 2
9:4/0 = 0

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_sld0t"]
resource_name = "obstacles"
scenes/1/scene = ExtResource("9_415li")
scenes/2/scene = ExtResource("10_ag1h7")

[sub_resource type="TileSet" id="TileSet_ixha2"]
sources/0 = SubResource("TileSetAtlasSource_ekoqy")
sources/1 = SubResource("TileSetScenesCollectionSource_sld0t")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74vqm"]
size = Vector2(64, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_luc54"]
size = Vector2(20, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0wy1"]
size = Vector2(20, 64)

[node name="EchelonDungeonLevelB" type="Node2D" node_paths=PackedStringArray("echelon_tiles")]
y_sort_enabled = true
script = ExtResource("1_x8iuq")
echelon_tiles = NodePath("EchelonTileMapLayers")
entrance_scene = ExtResource("2_dstv0")
exit_scene = ExtResource("3_7rjgo")

[node name="EchelonBackground" parent="." instance=ExtResource("4_unr5i")]

[node name="EchelonTileMapLayers" type="Node2D" parent="."]
z_index = -1
script = ExtResource("5_i5bmi")
north_door_position = Vector2i(-1, -8)
south_door_position = Vector2i(-1, 5)
west_door_position = Vector2i(-9, -1)
east_door_position = Vector2i(6, -1)
west_cliffs_position = Vector2i(-8, 1)
east_cliffs_position = Vector2i(6, 1)

[node name="cliffs" type="TileMapLayer" parent="EchelonTileMapLayers"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD5/wYABQABAAAAAAD6/wYABQAEAAAAAAAFAAYABQAEAAAAAAAGAAYABQACAAAAAAD7/wYABQAEAAAAAAD8/wYABQAEAAAAAAD9/wYABQAEAAAAAAD+/wYABQAEAAAAAAD//wYABQAEAAAAAAAAAAYABQAEAAAAAAABAAYABQAEAAAAAAACAAYABQAEAAAAAAADAAYABQAEAAAAAAAEAAYABQAEAAAAAADy/wgABQADAAAAAADz/wkABQABAAAAAAD1/woABQABAAAAAAD4/wsABQABAAAAAAD5/wwABQAAAAAAAAD0/wkABQAEAAAAAAD2/woABQAEAAAAAAD3/woABQAEAAAAAAD5/wsABQAEAAAAAADz/wgABQAGAAAAAAD1/wkABQAGAAAAAAD4/woABQAGAAAAAAD6/wsABQACAAAAAAA=")
tile_set = ExtResource("6_82wh7")

[node name="echelon" type="TileMapLayer" parent="EchelonTileMapLayers"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD6/w0AAgACAAYAAAD6/wwAAgACAAYAAAD6/wsAAgACAAYAAAD6/woAAgAGAAIAAAD6/wkAAgACAAYAAAD6/wgAAgACAAUAAAD6/wcAAgAEAAMAAAD5/w0AAgAGAAMAAAD5/wwAAgACAAYAAAD5/wsAAgACAAYAAAD5/woAAgAGAAIAAAD5/wkAAgAGAAIAAAD5/wgAAgAGAAIAAAD5/wcAAgADAAUAAAD4/w0AAgAGAAIAAAD4/wwAAgAGAAIAAAD4/wsAAgAGAAIAAAD4/woAAgACAAYAAAD4/wkAAgACAAYAAAD4/wgAAgAGAAIAAAD4/wcAAgACAAMAAAD3/w0AAgAFAAIAAAD3/wwAAgAGAAMAAAD3/wsAAgACAAYAAAD3/woAAgAGAAMAAAD3/wkAAgAGAAMAAAD3/wgAAgAGAAMAAAD3/wcAAgADAAEAAAD2/w0AAgAEAAIAAAD2/wwAAgACAAYAAAD2/wsAAgACAAYAAAD2/woAAgACAAYAAAD2/wkAAgAGAAIAAAD2/wgAAgAGAAMAAAD2/wcAAgAGAAEAAAD1/w0AAgACAAcAAAD1/wwAAgACAAYAAAD1/wsAAgAGAAMAAAD1/woAAgADAAYAAAD1/wkAAgAGAAIAAAD1/wgAAgAGAAMAAAD1/wcAAgADAAUAAAD0/w0AAgADAAQAAAD0/wwAAgABAAQAAAD0/wsAAgABAAQAAAD0/woAAgAFAAIAAAD0/wkAAgABAAUAAAD0/wgAAgAFAAMAAAD0/wcAAgABAAEAAAD//wsAAgAEAAMAAAD+/wsAAgACAAUAAAD9/wsAAgADAAYAAAD8/wwAAgAGAAIAAAD7/wwAAgACAAYAAAD4/w4AAgAEAAIAAAD3/w4AAgADAAQAAAD8/wsAAgAGAAMAAAD9/woAAgAGAAMAAAD+/woAAgACAAQAAAD7/wsAAgADAAYAAAD7/woAAgAGAAIAAAD8/woAAgAGAAIAAAD+/wwAAgAGAAQAAAD//wwAAgACAAIAAAD+/w0AAgACAAIAAAD9/w0AAgADAAcAAAD9/wwAAgADAAYAAAD7/w0AAgADAAYAAAD8/w0AAgAGAAQAAAD5/w4AAgACAAcAAAD6/w4AAgADAAcAAAD7/w4AAgADAAcAAAD8/w4AAgACAAIAAAD8/wgAAgADAAUAAAD9/wgAAgAGAAEAAAD+/wgAAgAEAAMAAAD7/wgAAgADAAUAAAD7/wkAAgACAAYAAAD8/wkAAgAGAAIAAAD9/wkAAgACAAYAAAD+/wkAAgAHAAIAAADy/wkAAgACAAMAAADx/wgAAgAEAAMAAADw/wgAAgACAAMAAADv/wgAAgAGAAEAAADu/wgAAgABAAEAAADx/wkAAgACAAUAAADz/wkAAgADAAUAAADw/wkAAgAGAAIAAADv/wkAAgADAAYAAADz/woAAgACAAcAAADy/woAAgAGAAQAAADx/woAAgACAAYAAADw/woAAgAGAAMAAADv/woAAgAGAAIAAADx/wsAAgADAAcAAADy/wsAAgACAAIAAADw/wsAAgADAAcAAADv/wsAAgAFAAUAAADu/woAAgAFAAIAAADt/woAAgAEAAIAAADs/woAAgADAAQAAADu/wkAAgABAAUAAADt/wkAAgACAAAAAADs/wkAAgACAAAAAADr/wkAAgADAAAAAADq/wkAAgADAAAAAADp/wkAAgAEAAAAAADo/wkAAgAEAAAAAADn/wkAAgAAAAcAAADu/wsAAgADAAQAAADv/wwAAgAAAAMAAADv/w0AAgAAAAQAAADv/w4AAgAHAAEAAADu/w4AAgABAAEAAADu/w8AAgABAAQAAADu/xAAAgABAAUAAADv/w8AAgAHAAMAAADv/xAAAgACAAUAAADt/xAAAgADAAAAAADs/xAAAgABAAAAAADw/xAAAgAEAAEAAADy/xEAAgACAAcAAADx/xAAAgAEAAEAAADz/xEAAgAEAAIAAAD0/xEAAgAFAAIAAAD1/xEAAgAGAAMAAAD2/xEAAgACAAYAAAD3/xAAAgAGAAEAAAD4/xAAAgAGAAEAAAD5/xAAAgADAAUAAAD6/xAAAgACAAMAAAD7/xAAAgADAAUAAAD8/xAAAgAEAAMAAAD6/xEAAgADAAYAAAD2/xAAAgAEAAEAAAD0/xAAAgACAAMAAAD1/xAAAgADAAEAAADz/xAAAgACAAMAAADy/xAAAgAFAAQAAADr/xAAAgAEAAAAAADq/xAAAgAAAAcAAADu/xEAAgADAAQAAADw/xEAAgAEAAIAAADv/xEAAgACAAcAAADx/xEAAgADAAcAAAD3/xEAAgACAAYAAAD4/xEAAgAGAAMAAAD5/xEAAgAGAAMAAAD7/xEAAgAGAAMAAAD8/xEAAgAEAAYAAAD9/xEAAgADAAAAAAD+/xEAAgADAAAAAAD//xEAAgABAAAAAAAAABEAAgAGAAcAAAD8/xIAAgACAAIAAAD7/xIAAgACAAcAAAD6/xIAAgAGAAQAAAD5/xIAAgACAAYAAAD5/xMAAgADAAYAAAD4/xMAAgAGAAIAAAD3/xMAAgAFAAIAAAD2/xMAAgADAAcAAAD1/xMAAgACAAcAAAD0/xMAAgABAAcAAADz/xMAAgADAAAAAADy/xMAAgABAAAAAADx/xMAAgAAAAcAAAD0/xIAAgABAAYAAAD1/xIAAgAGAAIAAAD2/xIAAgAGAAIAAAD3/xIAAgAGAAMAAAD4/xIAAgAGAAIAAAD6/xMAAgACAAQAAAD6/xQAAgACAAUAAAD7/xQAAgAEAAMAAAD5/xQAAgAFAAIAAAD4/xQAAgACAAcAAAD3/xQAAgADAAQAAAD8/xUAAgADAAEAAAD9/xUAAgADAAEAAAD+/xUAAgADAAUAAAD//xUAAgACAAMAAAAAABUAAgADAAEAAAABABUAAgADAAEAAAACABUAAgADAAEAAAADABUAAgAGAAEAAAAEABUAAgACAAMAAAAFABUAAgAEAAMAAAAGABYAAgAGAAEAAAAHABYAAgACAAMAAAAIABYAAgAEAAMAAAD7/xUAAgACAAUAAAD6/xUAAgAFAAIAAAD5/xUAAgADAAQAAAD6/xYAAgADAAQAAAD7/xYAAgADAAcAAAD9/xYAAgAEAAIAAAD8/xYAAgADAAcAAAD+/xYAAgACAAcAAAAAABYAAgAFAAIAAAD//xYAAgACAAcAAAABABYAAgAGAAIAAAACABYAAgADAAYAAAADABYAAgACAAYAAAAEABYAAgADAAYAAAAFABYAAgACAAUAAAAGABcAAgAGAAIAAAAHABcAAgAGAAIAAAAIABcAAgACAAUAAAAJABgAAgACAAUAAAAKABgAAgACAAMAAAAJABkAAgAGAAIAAAAKABkAAgAGAAMAAAALABkAAgADAAYAAAANABkAAgADAAEAAAAMABkAAgACAAUAAAAPABkAAgADAAUAAAAOABkAAgAEAAEAAAARABoAAgAGAAMAAAAQABkAAgAFAAQAAAASABoAAgACAAYAAAATABoAAgAHAAIAAAATABsAAgAHAAIAAAATABwAAgAHAAMAAAASABwAAgAGAAMAAAARABwAAgADAAYAAAAQABwAAgAGAAIAAAAOABwAAgACAAYAAAAPABwAAgAGAAIAAAAOABsAAgAGAAIAAAANABsAAgADAAYAAAAMABsAAgAGAAMAAAALABoAAgADAAYAAAAKABoAAgACAAYAAAAIABkAAgAGAAMAAAAHABkAAgAGAAIAAAAHABgAAgADAAYAAAAGABgAAgAGAAIAAAAFABgAAgAGAAMAAAAEABgAAgADAAYAAAAEABcAAgADAAYAAAAFABcAAgAGAAIAAAAJABcAAgAEAAMAAAADABcAAgAFAAIAAAACABcAAgACAAcAAAABABcAAgAGAAQAAAAAABcAAgABAAQAAAAIABgAAgAGAAMAAAANABoAAgACAAYAAAAMABoAAgADAAYAAAAMABwAAgADAAYAAAANABwAAgAGAAMAAAAPABsAAgACAAYAAAARABsAAgADAAYAAAAQABsAAgADAAYAAAASABsAAgACAAYAAAAOABoAAgACAAYAAAAJABoAAgADAAYAAAAIABoAAgADAAYAAAAHABoAAgADAAYAAAAGABoAAgAGAAMAAAAFABoAAgAGAAMAAAAEABoAAgAGAAMAAAADABsAAgAEAAIAAAACABsAAgACAAcAAAABABsAAgAEAAIAAAAEABsAAgAEAAIAAAAFABsAAgACAAcAAAAGABsAAgADAAcAAAALABsAAgADAAYAAAAJABsAAgAGAAMAAAAKABsAAgAGAAMAAAAHABsAAgAFAAIAAAAIABsAAgAGAAMAAAAAABsAAgAEAAIAAAD//xsAAgABAAcAAAD+/xsAAgAEAAAAAAD9/xsAAgABAAAAAAD8/xsAAgAEAAAAAAD7/xsAAgAAAAcAAAAPABoAAgACAAYAAAAQABoAAgADAAYAAAARABkAAgACAAYAAAASABkAAgAGAAMAAAARABgAAgACAAYAAAAQABgAAgABAAYAAAAQABcAAgAFAAIAAAAPABcAAgADAAQAAAAOABYAAgACAAIAAAAOABUAAgADAAYAAAANABUAAgABAAYAAAAMABQAAgADAAAAAAALABQAAgAAAAcAAAAOABQAAgAFAAYAAAANABQAAgACAAAAAAAQABQAAgACAAMAAAAPABQAAgACAAMAAAARABQAAgAFAAQAAAASABQAAgADAAYAAAASABUAAgADAAYAAAARABUAAgAGAAMAAAAQABUAAgADAAYAAAAPABYAAgABAAQAAAANABYAAgADAAQAAAAMABcAAgAEAAMAAAALABcAAgABAAEAAAALABgAAgAFAAQAAAAMABgAAgAHAAIAAAATABkAAgAHAAIAAAATABgAAgACAAQAAAASABcAAgAGAAMAAAARABcAAgADAAYAAAARABYAAgADAAYAAAATABMAAgAGAAIAAAAUABMAAgACAAYAAAAVABQAAgAGAAMAAAAWABQAAgACAAYAAAAXABUAAgADAAYAAAAXABYAAgADAAcAAAAWABYAAgADAAcAAAAUABcAAgACAAIAAAAVABYAAgAEAAIAAAATABYAAgADAAYAAAATABUAAgACAAYAAAAUABQAAgADAAYAAAAUABIAAgAFAAQAAAATABIAAgAEAAEAAAASABIAAgABAAEAAAARABMAAgABAAEAAAAUABUAAgAGAAIAAAAVABMAAgAGAAMAAAAVABIAAgACAAUAAAASABMAAgAFAAQAAAATABQAAgAGAAIAAAAXABQAAgACAAUAAAAYABQAAgACAAAAAAAZABQAAgAFAAAAAAAZABUAAgACAAIAAAAYABUAAgAGAAQAAAAYABYAAgACAAIAAAAUABYAAgAGAAQAAAASABYAAgAGAAIAAAAQABYAAgADAAYAAAASABgAAgACAAYAAAAKABwAAgADAAYAAAALABwAAgAGAAMAAAAJABwAAgAGAAIAAAAIABwAAgAGAAIAAAAFABkAAgAGAAMAAAAEABkAAgADAAYAAAADABkAAgAFAAQAAAACABkAAgACAAMAAAABABkAAgACAAUAAAABABoAAgADAAYAAAACABoAAgAGAAMAAAADABoAAgACAAYAAAAAABgAAgAFAAMAAAD//xkAAgABAAEAAAD//xoAAgABAAYAAAAAABoAAgADAAYAAAAHABwAAgABAAQAAAAHAB0AAgAFAAMAAAAIAB4AAgAEAAIAAAALAB4AAgAFAAIAAAAKAB4AAgAEAAIAAAAJAB4AAgAEAAIAAAANAB8AAgADAAYAAAAMAB4AAgADAAYAAAAMAB8AAgAGAAIAAAAMACAAAgADAAcAAAALACAAAgABAAcAAAAKACAAAgAAAAAAAAAKACEAAgAHAAYAAAAOACAAAgACAAcAAAANACAAAgADAAcAAAAPAB8AAgAGAAQAAAAQAB8AAgACAAcAAAAQAB4AAgADAAYAAAARAB4AAgACAAYAAAATAB4AAgAEAAIAAAASAB4AAgAGAAQAAAAVAB0AAgABAAAAAAAUAB4AAgACAAIAAAAXAB0AAgAEAAAAAAAWAB0AAgAEAAAAAAAZAB0AAgABAAAAAAAYAB0AAgADAAAAAAAaAB0AAgAEAAAAAAAbAB0AAgADAAAAAAAcAB0AAgACAAAAAAAdAB0AAgACAAAAAAAeAB0AAgACAAAAAAAfAB0AAgAFAAAAAAAfAB4AAgAEAAcAAAAgAB4AAgAGAAcAAAAeAB4AAgAEAAIAAAAdAB4AAgADAAcAAAAcAB4AAgAAAAUAAAAUAB0AAgACAAMAAAATAB0AAgACAAUAAAASAB0AAgAGAAIAAAARAB0AAgAGAAMAAAAQAB0AAgADAAYAAAAPAB0AAgADAAYAAAAOAB0AAgADAAYAAAANAB4AAgACAAYAAAAOAB8AAgAGAAMAAAARAB8AAgADAAcAAAASAB8AAgACAAIAAAAPACAAAgACAAIAAAAPAB4AAgAGAAIAAAANAB0AAgACAAYAAAAOAAYAAgACAAQAAAAOAAUAAgAEAAMAAAANAAUAAgADAAEAAAALAAUAAgAEAAEAAAAMAAUAAgADAAEAAAAKAAUAAgADAAEAAAAJAAUAAgABAAEAAAAMAAYAAgAGAAIAAAANAAYAAgAGAAMAAAAMAAcAAgACAAYAAAAMAAgAAgAGAAMAAAAMAAkAAgAGAAIAAAANAAkAAgAGAAIAAAAOAAkAAgACAAYAAAAPAAkAAgAGAAIAAAAPAAgAAgACAAUAAAAPAAcAAgAEAAMAAAAOAAcAAgACAAUAAAANAAcAAgAGAAMAAAALAAcAAgADAAYAAAAKAAgAAgAGAAMAAAAJAAkAAgAGAAIAAAAIAAkAAgAFAAIAAAAIAAgAAgADAAYAAAAHAAcAAgADAAYAAAAGAAcAAgAGAAMAAAAFAAcAAgAFAAQAAAAFAAgAAgAFAAIAAAAFAAkAAgADAAQAAAAGAAkAAgACAAcAAAAHAAkAAgADAAcAAAAJAAgAAgACAAYAAAAJAAcAAgAGAAMAAAAJAAYAAgAFAAQAAAAIAAYAAgADAAUAAAAHAAYAAgACAAMAAAAFAAYAAgABAAEAAAAGAAYAAgADAAEAAAAEAAcAAgAEAAEAAAADAAcAAgACAAAAAAADAAgAAgADAAQAAAAEAAgAAgAEAAIAAAAIAAcAAgAGAAMAAAAKAAcAAgADAAYAAAALAAYAAgACAAYAAAAKAAYAAgACAAYAAAABAAcAAgAAAAcAAAACAAcAAgACAAMAAAAHAAgAAgADAAYAAAAGAAgAAgADAAYAAAALAAgAAgACAAYAAAAPAAoAAgAEAAIAAAAQAAoAAgACAAIAAAAOAAoAAgAEAAIAAAAMAAoAAgACAAcAAAANAAoAAgACAAcAAAAKAAoAAgACAAcAAAALAAoAAgAEAAIAAAAJAAoAAgAEAAIAAAALAAkAAgACAAYAAAAIAAoAAgADAAQAAAAQAAkAAgAGAAQAAAARAAkAAgAEAAcAAAASAAkAAgADAAAAAAATAAkAAgADAAAAAAAUAAkAAgAEAAAAAAAVAAkAAgADAAAAAAAWAAkAAgAGAAcAAAARAAgAAgAEAAMAAAAQAAgAAgADAAUAAAANAAgAAgADAAYAAAAOAAgAAgADAAYAAAASAAsAAgAEAAEAAAARAAsAAgABAAEAAAAWAAwAAgACAAEAAAAVAAwAAgADAAUAAAAUAAsAAgAEAAMAAAATAAsAAgAGAAEAAAAZAA0AAgAGAAEAAAAYAA0AAgAEAAEAAAAXAAwAAgAFAAAAAAAaAA0AAgAEAAMAAAAaAA4AAgAHAAMAAAAZAA4AAgACAAYAAAAXAA0AAgACAAUAAAAUAAwAAgACAAUAAAAKAAkAAgADAAYAAAAYAA4AAgAGAAMAAAAXAA4AAgADAAYAAAAXAA8AAgADAAYAAAAWAA8AAgAGAAIAAAAVAA8AAgACAAYAAAAUAA8AAgADAAYAAAAYAA8AAgACAAYAAAAaAA8AAgACAAUAAAAZAA8AAgADAAYAAAAWAA4AAgAGAAMAAAAVAA4AAgADAAYAAAAUAA4AAgADAAYAAAAWAA0AAgACAAYAAAATAAwAAgAGAAIAAAATAA0AAgAGAAMAAAASAAwAAgAGAAIAAAARAAwAAgAFAAQAAAAQAAwAAgABAAEAAAAQAA0AAgABAAUAAAARAA0AAgADAAYAAAASAA4AAgAGAAMAAAATAA4AAgACAAYAAAAbAA8AAgAEAAMAAAAZABAAAgAGAAQAAAAaABAAAgAEAAIAAAAbABAAAgAEAAcAAAAdABAAAgACAAAAAAAcABAAAgADAAAAAAAeABAAAgAEAAMAAAAeABEAAgAEAAQAAAAdABEAAgADAAQAAAAfABEAAgAEAAMAAAAeABIAAgADAAQAAAAfABIAAgAEAAQAAAAgABIAAgAEAAMAAAAgABMAAgACAAIAAAAfABMAAgADAAQAAAAVAA0AAgAGAAMAAAAUAA0AAgAGAAMAAAAPAA0AAgAAAAcAAAAQAA4AAgADAAQAAAARAA4AAgAFAAIAAAASAA0AAgACAAYAAAASAA8AAgAFAAIAAAARAA8AAgADAAQAAAAUABAAAgAFAAIAAAAXABAAAgAFAAIAAAAWABAAAgADAAcAAAAYABAAAgAGAAMAAAAYABEAAgADAAcAAAAZABEAAgACAAIAAAAXABEAAgADAAQAAAAVABAAAgAGAAQAAAATAA8AAgADAAYAAAASABAAAgADAAQAAAATABAAAgADAAcAAAAUABEAAgAFAAMAAAAVABEAAgACAAQAAAAWABIAAgAEAAMAAAAXABMAAgAEAAMAAAAWABMAAgACAAUAAAAVABUAAgAGAAIAAAAWABUAAgAGAAMAAAATABcAAgAGAAQAAAAPABUAAgAFAAIAAAAGABkAAgAGAAIAAAAOAB4AAgACAAYAAAALAB8AAgAFAAMAAAALAB0AAgAGAAIAAAAMAB0AAgADAAYAAAAJAB0AAgADAAYAAAAIAB0AAgAGAAMAAAAKAB0AAgAGAAMAAAAHAB4AAgADAAQAAAADABgAAgAFAAMAAAAAABkAAgAFAAQAAAABABgAAgAHAAMAAADz//r/AgACAAIAAADy//r/AgAGAAQAAADw//r/AgAGAAMAAADx//r/AgAGAAIAAADv//n/AgAGAAMAAADu//n/AgADAAYAAADt//n/AgAGAAIAAADs//n/AgACAAYAAADs//r/AgAGAAMAAADr//r/AgAGAAIAAADr//v/AgAGAAIAAADs//v/AgAGAAMAAADu//v/AgAGAAMAAADt//v/AgACAAYAAADv//v/AgAGAAIAAADw//v/AgACAAYAAADw//z/AgADAAYAAADx//v/AgAGAAQAAADy//v/AgACAAIAAADy//n/AgADAAYAAADw//j/AgACAAMAAADx//n/AgAGAAMAAADu//f/AgAFAAQAAADv//j/AgACAAUAAADs//b/AgAEAAMAAADt//f/AgAEAAEAAADr//X/AgAEAAMAAADq//X/AgAEAAEAAADp//X/AgABAAEAAADp//b/AgAFAAQAAADo//b/AgADAAUAAADn//b/AgABAAEAAADm//f/AgAFAAQAAADn//j/AgAGAAMAAADo//j/AgAGAAIAAADo//n/AgACAAYAAADp//n/AgADAAYAAADq//n/AgACAAYAAADt//r/AgADAAYAAADu//r/AgADAAYAAADv//r/AgACAAYAAADw//n/AgAGAAIAAADt//j/AgADAAYAAADr//j/AgADAAYAAADs//j/AgAGAAMAAADq//j/AgAGAAMAAADp//j/AgADAAYAAADr//n/AgAGAAMAAADu//j/AgACAAYAAADn//n/AgAGAAMAAADq//f/AgAGAAMAAADr//f/AgACAAYAAADr//b/AgACAAUAAADq//b/AgACAAYAAADo//f/AgADAAYAAADn//f/AgADAAYAAADp//f/AgADAAYAAADs//f/AgACAAUAAADv//f/AgAHAAIAAADu//b/AgABAAEAAADv//b/AgAEAAUAAADw//b/AgAGAAcAAADo//r/AgAFAAIAAADo//v/AgADAAQAAADp//v/AgACAAcAAADq//z/AgADAAQAAADr//z/AgADAAcAAADn//r/AgACAAcAAADq//v/AgAFAAIAAADq//r/AgAGAAMAAADp//r/AgAGAAIAAADt//z/AgACAAcAAADs//z/AgACAAcAAADu//z/AgAFAAIAAADm//r/AgADAAcAAADl//r/AgACAAcAAADl//n/AgACAAYAAADm//n/AgAGAAMAAADm//j/AgADAAYAAADl//f/AgACAAMAAADk//f/AgAGAAEAAADj//f/AgABAAEAAADj//j/AgABAAUAAADj//n/AgABAAYAAADj//r/AgADAAQAAADk//r/AgADAAcAAADk//n/AgAGAAIAAADk//j/AgADAAYAAADl//j/AgAGAAMAAADi//j/AgABAAAAAADh//j/AgAAAAcAAADv//z/AgADAAYAAADx//3/AgAEAAcAAADy//3/AgAGAAcAAADw//3/AgAEAAIAAADv//3/AgACAAcAAADu//3/AgADAAQAAADx//z/AgACAAQAAADz//n/AgACAAQAAAD0//j/AgABAAcAAAD0//f/AgABAAQAAAD1//b/AgAGAAQAAAD1//X/AgACAAYAAAD2//T/AgAGAAMAAAD2//P/AgAGAAIAAAD3//P/AgACAAYAAAD3//L/AgAGAAIAAAD4//L/AgAGAAMAAAD5//L/AgACAAYAAAD5//H/AgADAAYAAAD6//H/AgAGAAIAAAAAAO//AgACAAIAAAD//+//AgABAAcAAAD+/+//AgAEAAAAAAD7/+//AgACAAUAAAD8/+//AgAGAAEAAAD9/+//AgACAAAAAAD6/+//AgAGAAMAAAD4/+//AgABAAYAAAD5/+//AgACAAYAAAD4//D/AgAFAAQAAAD5//D/AgADAAYAAAD6//D/AgAGAAIAAAD3//D/AgADAAEAAAD2//H/AgAGAAIAAAD1//H/AgADAAYAAAD1//L/AgAGAAMAAAD2//L/AgADAAYAAAD7//H/AgAGAAMAAAD8//H/AgAHAAMAAAD8//L/AgACAAIAAAD7//L/AgACAAcAAAD6//L/AgAGAAQAAAD4//P/AgAGAAIAAAD3//T/AgACAAYAAAD4//T/AgACAAYAAAD5//T/AgACAAQAAAD4//X/AgAGAAQAAAD5//X/AgACAAIAAAD3//b/AgAEAAIAAAD3//X/AgAGAAMAAAD6//P/AgACAAIAAAD1//D/AgAFAAQAAAD2//D/AgACAAUAAAD1/+//AgABAAEAAAD2/+//AgAEAAMAAAD3/+7/AgAAAAcAAAD4/+7/AgAGAAEAAAD6/+7/AgADAAEAAAD5/+7/AgAEAAEAAAD7/+7/AgAEAAMAAAD8//D/AgAGAAQAAAD7//D/AgAGAAIAAAD9//D/AgAGAAYAAAD4//H/AgAGAAMAAAD3//H/AgAGAAMAAAD5//P/AgAGAAQAAADz//L/AgAGAAMAAAD0//L/AgAGAAIAAADy//L/AgAGAAIAAADx//L/AgAGAAMAAADw//L/AgADAAYAAADv//P/AgADAAcAAAD0//P/AgACAAYAAADz//D/AgADAAUAAAD0//D/AgADAAEAAADy//D/AgADAAEAAADw//D/AgABAAEAAADx//D/AgAGAAEAAADv//H/AgABAAEAAADv//L/AgAFAAQAAADz//H/AgADAAYAAAD0//H/AgACAAYAAADy//H/AgACAAYAAADx//H/AgACAAYAAADy//P/AgACAAYAAADz//P/AgAGAAIAAAD1//T/AgAGAAMAAAD0//T/AgAGAAMAAAD0//X/AgAGAAMAAAD2//X/AgADAAYAAADw//P/AgACAAcAAADx//P/AgAFAAIAAADw//H/AgAFAAQAAAD1//P/AgADAAYAAADz//T/AgADAAYAAADy//T/AgAFAAIAAADx//T/AgADAAQAAADz//X/AgAGAAIAAADy//X/AgABAAQAAADu//L/AgADAAUAAADt//L/AgABAAEAAADt//P/AgABAAcAAADs//P/AgAAAAcAAADu//P/AgACAAcAAADz//b/AgAEAAIAAAD0//b/AgAFAAIAAAD2//b/AgADAAcAAADy//b/AgADAAQAAAD4//b/AgACAAIAAAD1//f/AgACAAQAAAD1//j/AgACAAIAAADz//j/AgAGAAEAAADy//j/AgAGAAEAAADx//j/AgACAAMAAAADAOz/AgAFAAIAAAACAOv/AgAGAAMAAAABAOv/AgADAAYAAAACAOr/AgADAAYAAAADAOr/AgADAAYAAAABAOr/AgAGAAMAAAD//+r/AgADAAYAAAAAAOr/AgAGAAMAAAD+/+r/AgAGAAMAAAD9/+n/AgACAAAAAAD8/+n/AgAAAAcAAAD+/+n/AgACAAMAAAAAAOv/AgADAAYAAAAAAOz/AgAGAAIAAAABAOz/AgAGAAQAAAACAOz/AgAEAAIAAAABAO3/AgACAAIAAAAAAO3/AgAFAAUAAAD//+7/AgABAAYAAAAAAO7/AgACAAQAAAD//+3/AgAFAAUAAAD+/+3/AgAGAAQAAAD9/+3/AgABAAcAAAD8/+3/AgAAAAcAAAAAAOn/AgAGAAIAAAD//+n/AgAFAAQAAAD+/+v/AgAGAAIAAAD+/+z/AgAGAAIAAAD//+z/AgAGAAMAAAD9/+r/AgABAAQAAAD9/+v/AgABAAQAAAD//+v/AgADAAYAAAD9/+z/AgABAAYAAAAEAOr/AgAGAAMAAAADAOv/AgAGAAMAAAAEAOn/AgACAAUAAAADAOn/AgAGAAIAAAACAOn/AgAGAAIAAAAEAOj/AgAEAAMAAAADAOj/AgAGAAEAAAABAOj/AgADAAUAAAACAOj/AgAGAAEAAAD//+j/AgABAAEAAAAAAOj/AgAGAAEAAAABAOn/AgAGAAIAAAAGAOn/AgAGAAEAAAAFAOn/AgAGAAEAAAAIAOr/AgADAAEAAAAHAOn/AgAEAAMAAAAKAOv/AgACAAAAAAAJAOr/AgAEAAMAAAAKAOz/AgACAAQAAAAJAO3/AgADAAQAAAAJAOz/AgAFAAIAAAALAOv/AgAGAAcAAAAIAOv/AgADAAYAAAAJAOv/AgACAAUAAAAFAOz/AgAGAAQAAAAGAOz/AgAEAAIAAAAHAOv/AgAGAAIAAAAEAOz/AgACAAYAAAADAO3/AgADAAQAAAAEAO3/AgACAAcAAAAFAO3/AgACAAIAAAAHAOz/AgAEAAIAAAAIAOz/AgAEAAIAAAAFAOr/AgADAAYAAAAGAOv/AgAGAAMAAAAGAOr/AgACAAYAAAAHAOr/AgACAAUAAAAEAOv/AgAGAAIAAAAFAOv/AgACAAYAAAAKAO3/AgAEAAcAAAALAO3/AgAFAAAAAAALAO7/AgAAAAUAAAAMAO7/AgACAAAAAAAMAO//AgADAAQAAAANAO//AgAEAAIAAAAOAO//AgAFAAIAAAAPAO//AgAGAAQAAAAQAO//AgACAAcAAAARAO//AgACAAIAAAAQAO7/AgADAAYAAAARAO7/AgAGAAQAAAASAO7/AgAEAAcAAAASAO3/AgAEAAMAAAARAOz/AgAEAAMAAAAPAOz/AgADAAEAAAAQAOz/AgADAAEAAAAOAOz/AgABAAEAAAANAO3/AgABAAEAAAANAO7/AgAFAAQAAAAOAO3/AgAFAAQAAAAOAO7/AgACAAYAAAAPAO7/AgACAAYAAAAOAPD/AgADAAIAAAAQAO3/AgAGAAMAAAARAO3/AgACAAUAAAAPAO3/AgAGAAMAAAATAO7/AgAGAAcAAAAPAPD/AgACAAIAAAAOAPH/AgAAAAMAAAAOAPL/AgAAAAEAAAAPAPP/AgAEAAEAAAAQAPT/AgAGAAMAAAARAPT/AgADAAYAAAASAPX/AgACAAcAAAAUAPX/AgADAAcAAAATAPX/AgAEAAIAAAAVAPX/AgAFAAIAAAAVAPb/AgADAAQAAAAWAPb/AgADAAcAAAAXAPb/AgACAAcAAAAYAPb/AgACAAcAAAAZAPb/AgACAAIAAAAZAPX/AgAHAAIAAAAZAPT/AgAEAAMAAAAYAPT/AgAGAAEAAAAWAPT/AgAEAAEAAAAXAPT/AgACAAEAAAAVAPP/AgAEAAMAAAATAPP/AgACAAMAAAAUAPP/AgACAAMAAAASAPP/AgADAAUAAAASAPT/AgAGAAMAAAARAPX/AgACAAcAAAAQAPX/AgADAAcAAAARAPP/AgADAAUAAAAOAPT/AgADAAYAAAAPAPT/AgADAAYAAAANAPT/AgAGAAMAAAANAPP/AgAEAAEAAAAMAPP/AgAEAAEAAAALAPP/AgACAAUAAAAKAPP/AgACAAYAAAAJAPP/AgAFAAQAAAALAPL/AgAEAAMAAAAKAPL/AgADAAUAAAAJAPL/AgABAAEAAAAIAPP/AgACAAMAAAAHAPP/AgABAAEAAAAHAPT/AgADAAQAAAAIAPT/AgAFAAIAAAAJAPT/AgAGAAIAAAAKAPT/AgACAAYAAAALAPT/AgACAAYAAAAOAPP/AgADAAMAAAAQAPL/AgAHAAAAAAAQAPP/AgADAAMAAAAMAPT/AgACAAYAAAAPAPX/AgADAAcAAAAWAPX/AgAGAAIAAAAXAPX/AgAGAAMAAAAVAPT/AgACAAUAAAAUAPT/AgACAAYAAAATAPT/AgACAAYAAAAYAPX/AgAGAAIAAAAOAPX/AgAEAAIAAAANAPX/AgAEAAIAAAAMAPX/AgADAAcAAAALAPX/AgAEAAIAAAAKAPX/AgAEAAIAAAAJAPX/AgACAAcAAAAIAPX/AgADAAQAAAARAPj/AgAEAAMAAAAQAPj/AgAEAAEAAAAPAPj/AgACAAAAAAAOAPj/AgAEAAAAAAANAPj/AgADAAAAAAAMAPj/AgAAAAcAAAATAPn/AgAEAAMAAAASAPn/AgAGAAEAAAASAPr/AgACAAcAAAARAPn/AgACAAUAAAAQAPn/AgAFAAIAAAAPAPn/AgADAAQAAAARAPr/AgADAAcAAAAQAPr/AgADAAQAAAATAPr/AgACAAIAAAA=")
tile_set = ExtResource("6_82wh7")

[node name="floor" type="TileMapLayer" parent="EchelonTileMapLayers"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD5//v/BgABAAYAAAD5//z/BgABAAQAAAD5//3/BgAFAAMAAAD5//7/BgABAAYAAAD5/wEABgABAAYAAAD5/wIABgABAAQAAAD5/wMABgABAAYAAAD5/wQABgAFAAMAAAD6//v/BgACAAYAAQD6//z/BgAGAAIAAQD6//3/BgADAAYAAAD6//7/BgACAAYAAAD6////BgADAAYAAAD6/wAABgADAAYAAAD6/wEABgAGAAMAAQD6/wIABgAGAAIAAAD6/wMABgACAAYAAQD6/wQABgADAAYAAAD7//v/BgACAAYAAQD7//z/BgADAAYAAAD7//3/BgAGAAIAAQD7//7/BgAGAAIAAQD7////BgACAAYAAQD7/wAABgADAAYAAAD7/wEABgACAAYAAQD7/wIABgAGAAMAAQD7/wMABgACAAYAAAD7/wQABgACAAYAAQD8//v/BgADAAYAAAD8//z/BgACAAYAAAD8//3/BgACAAYAAAD8//7/BgACAAYAAAD8////BgADAAYAAAD8/wAABgACAAYAAAD8/wEABgAGAAIAAAD8/wIABgACAAYAAQD8/wMABgACAAYAAQD8/wQABgAGAAIAAAD9//v/BgADAAYAAAD9//z/BgAGAAMAAQD9//3/BgAGAAMAAAD9//7/BgACAAYAAQD9////BgAGAAIAAQD9/wAABgADAAYAAAD9/wEABgACAAYAAAD9/wIABgAGAAIAAAD9/wMABgACAAYAAQD9/wQABgACAAYAAAD+//v/BgACAAYAAAD+//z/BgACAAYAAAD+//3/BgACAAYAAAD+//7/BgAGAAIAAQD+////BgAGAAIAAAD+/wAABgADAAYAAQD+/wEABgADAAYAAQD+/wIABgACAAYAAQD+/wMABgAGAAIAAQD+/wQABgADAAYAAQD///v/BgACAAYAAQD///z/BgACAAYAAQD///3/BgACAAYAAQD///7/BgAGAAIAAQD/////BgAGAAIAAAD//wAABgAGAAIAAQD//wEABgADAAYAAQD//wIABgACAAYAAQD//wMABgAGAAIAAAD//wQABgACAAYAAQAAAPv/BgAGAAIAAAAAAPz/BgACAAYAAQAAAP3/BgAGAAMAAQAAAP7/BgAGAAMAAQAAAP//BgAGAAIAAQAAAAAABgACAAYAAQAAAAEABgAGAAMAAAAAAAIABgAGAAMAAAAAAAMABgACAAYAAQAAAAQABgAGAAIAAAABAPv/BgACAAYAAAABAPz/BgAGAAMAAAABAP3/BgAGAAMAAQABAP7/BgAGAAMAAAABAP//BgAGAAMAAQABAAAABgACAAYAAAABAAEABgAGAAIAAQABAAIABgADAAYAAQABAAMABgAGAAIAAAABAAQABgADAAYAAAACAPv/BgAGAAMAAAACAPz/BgAGAAMAAQACAP3/BgAGAAMAAAACAP7/BgAGAAIAAQACAP//BgAGAAMAAQACAAAABgAGAAIAAQACAAEABgADAAYAAAACAAIABgAGAAMAAAACAAMABgAGAAIAAAACAAQABgAGAAMAAQADAPv/BgAGAAMAAAADAPz/BgAGAAMAAAADAP3/BgADAAYAAAADAP7/BgACAAYAAQADAP//BgADAAYAAQADAAAABgACAAYAAAADAAEABgACAAYAAAADAAIABgAGAAMAAAADAAMABgAGAAIAAAADAAQABgACAAYAAAAEAPv/BgAGAAMAAQAEAPz/BgAGAAIAAQAEAP3/BgADAAYAAAAEAP7/BgAGAAIAAAAEAP//BgADAAYAAAAEAAAABgAGAAMAAAAEAAEABgAGAAIAAAAEAAIABgACAAYAAQAEAAMABgAGAAMAAQAEAAQABgAGAAIAAAAFAPv/BgACAAYAAAAFAPz/BgADAAYAAAAFAP3/BgADAAYAAAAFAP7/BgADAAYAAQAFAP//BgAGAAMAAQAFAAAABgADAAYAAAAFAAEABgADAAYAAQAFAAIABgAGAAMAAAAFAAMABgADAAYAAAAFAAQABgADAAYAAAAGAPv/BgAHAAIAAAAGAPz/BgACAAQAAAAGAP3/BgAHAAIAAAAGAP7/BgACAAQAAAAGAAEABgAHAAIAAAAGAAIABgAHAAMAAAAGAAMABgAHAAMAAAAGAAQABgAHAAIAAAAFAAUABgACAAcAAAAEAAUABgACAAcAAAADAAUABgACAAcAAAACAAUABgAEAAIAAAABAAUABgAEAAIAAAD6/wUABgAEAAIAAAD7/wUABgADAAcAAAD8/wUABgAEAAIAAAD9/wUABgADAAcAAAD+/wUABgACAAcAAAD6//r/BgAGAAEAAAD7//r/BgAEAAEAAAD8//r/BgADAAUAAAADAPr/BgAGAAEAAAAEAPr/BgAGAAEAAAAFAPr/BgAEAAEAAAACAPr/BgAGAAEAAAABAPr/BgAGAAEAAAD+//r/BgADAAUAAAD9//r/BgAEAAEAAAD5//r/BgABAAEAAAAGAPr/BgAEAAMAAAD5/wUABgADAAQAAAAGAAUABgACAAIAAAD5/wgABgAEAAEAAAD6/wgABgAEAAMAAAD6/wkABgAHAAMAAAD5/wkABgAGAAIAAQD6/woABgACAAIAAAD5/woABgAFAAUAAAD4/wkABgAFAAIAAAD4/woABgADAAQAAAD5/wsABgAHAAYAAAD1/wYABgABAAEAAAD1/wcABgAFAAQAAAD1/wgABgAFAAIAAAD2/wgABgAGAAIAAAD3/wgABgACAAYAAAD3/wkABgADAAcAAAD4/wgABgACAAUAAAD2/wcABgAGAAMAAQD2/wYABgADAAUAAAD3/wYABgAEAAMAAAD3/wcABgACAAUAAAD4/wcABgAEAAMAAAD0/wcABgADAAUAAADz/wcABgADAAEAAADy/wcABgAAAAcAAADz/wgABgADAAQAAAD0/wgABgACAAcAAAD1/wkABgADAAQAAAD2/wkABgAEAAIAAAD///r/BgAGAAEAAAAAAPr/BgADAAUAAAAGAP//BgACAAQAAAAGAAAABgAHAAMAAAD//wUABgAEAAIAAAAAAAUABgADAAcAAAD5////BgABAAQAAAD5/wAABgAFAAMAAAA=")
tile_set = ExtResource("6_82wh7")

[node name="rocks" type="TileMapLayer" parent="EchelonTileMapLayers"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD2/wkAAQAAAAcAAAD3/wkAAQABAAcAAAD3/wgAAQABAAMAAAD4/wgAAQAEAAEAAAD5/wgAAQAEAAMAAAD5/wkAAQAHAAQAAAD3/wcAAQAFAAAAAAD2/wcAAQADAAAAAAD1/wcAAQACAAMAAAD1/wgAAQACAAIAAAD0/wgAAQADAAQAAAD0/wcAAQADAAEAAADz/wcAAQABAAAAAADy/wcAAQAAAAcAAAD5/wsAAQAHAAYAAAD5/woAAQAAAAMAAAD4/wkAAQADAAcAAAA=")
tile_set = ExtResource("6_82wh7")

[node name="pavement" type="TileMapLayer" parent="EchelonTileMapLayers"]
use_parent_material = true
tile_set = ExtResource("6_82wh7")

[node name="ramps" type="TileMapLayer" parent="EchelonTileMapLayers"]
use_parent_material = true
tile_set = ExtResource("6_82wh7")

[node name="walls" type="TileMapLayer" parent="EchelonTileMapLayers"]
use_parent_material = true
tile_set = ExtResource("6_82wh7")

[node name="cliffs2" type="TileMapLayer" parent="EchelonTileMapLayers"]
use_parent_material = true
tile_set = ExtResource("7_7koj6")

[node name="EchelonTileMapLayers2" type="Node2D" parent="."]
z_index = -1

[node name="echelon" type="TileMapLayer" parent="EchelonTileMapLayers2"]
use_parent_material = true
tile_set = ExtResource("7_7koj6")

[node name="floor" type="TileMapLayer" parent="EchelonTileMapLayers2"]
use_parent_material = true
tile_set = ExtResource("7_7koj6")

[node name="rocks" type="TileMapLayer" parent="EchelonTileMapLayers2"]
use_parent_material = true
tile_set = ExtResource("7_7koj6")

[node name="pavement" type="TileMapLayer" parent="EchelonTileMapLayers2"]
use_parent_material = true
tile_set = ExtResource("7_7koj6")

[node name="ramps" type="TileMapLayer" parent="EchelonTileMapLayers2"]
use_parent_material = true
tile_set = ExtResource("7_7koj6")

[node name="walls" type="TileMapLayer" parent="EchelonTileMapLayers2"]
use_parent_material = true
tile_set = ExtResource("7_7koj6")

[node name="EchelonDecorationTiles" type="TileMapLayer" parent="."]
y_sort_enabled = true
use_parent_material = true
tile_set = SubResource("TileSet_ixha2")

[node name="GameStart" parent="." instance=ExtResource("11_7w77i")]

[node name="GameCamera" parent="." instance=ExtResource("12_fo124")]
limit_left = -256
limit_top = -224
limit_right = 256
limit_bottom = 224
limit_smoothed = true
editor_draw_limits = true

[node name="Entities" type="Node2D" parent="." groups=["entities"]]
y_sort_enabled = true

[node name="Foreground" type="Node2D" parent="." groups=["foreground"]]
z_index = 1

[node name="DungeonLevelTransitionAreasController" type="Node2D" parent="."]
script = ExtResource("13_7bwq1")
player_position_north = Vector2(0, -192)
player_position_south = Vector2(0, 192)
player_position_west = Vector2(-224, 0)
player_position_east = Vector2(224, 0)

[node name="DungeonLevelTransitionAreaNorth" parent="DungeonLevelTransitionAreasController" instance=ExtResource("14_neaxl")]
script = ExtResource("15_tgxct")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DungeonLevelTransitionAreasController/DungeonLevelTransitionAreaNorth"]
position = Vector2(0, -214)
shape = SubResource("RectangleShape2D_74vqm")

[node name="DungeonLevelTransitionAreaSouth" parent="DungeonLevelTransitionAreasController" instance=ExtResource("14_neaxl")]
script = ExtResource("15_tgxct")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DungeonLevelTransitionAreasController/DungeonLevelTransitionAreaSouth"]
position = Vector2(0, 214)
shape = SubResource("RectangleShape2D_74vqm")

[node name="DungeonLevelTransitionAreaWest" parent="DungeonLevelTransitionAreasController" instance=ExtResource("14_neaxl")]
script = ExtResource("15_tgxct")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DungeonLevelTransitionAreasController/DungeonLevelTransitionAreaWest"]
position = Vector2(-246, 0)
shape = SubResource("RectangleShape2D_luc54")

[node name="DungeonLevelTransitionAreaEast" parent="DungeonLevelTransitionAreasController" instance=ExtResource("14_neaxl")]
script = ExtResource("15_tgxct")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DungeonLevelTransitionAreasController/DungeonLevelTransitionAreaEast"]
position = Vector2(246, 0)
shape = SubResource("RectangleShape2D_l0wy1")
